fixed layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@ aside img {
     display:grid;
     grid-template-columns: 1fr 1fr;
     column-gap:10px;
-    max-width: 200px;
 }
 
 
